architecture-ide/tests/fixtures/negative/C7_only_error_cases.concept
concept Password [U]

  purpose
    store credentials

  actions
    set [ user: U ; password: string ] => [ error: string ]

  operational principle
    after set [ user: x ; password: "secret" ] => [ error: "nope" ]
